change uses reference

--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Update gist
-        uses: matchai/waka-box@master
+        uses: vwainman/waka-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: dba24c3bee2e406a414ddffd3a0dc6eb
